# catapult

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-catapult  README.md  config.yaml  docker-compose.ci.yml  docker-compose.yml  manage.py  pyproject.toml  report.log.txt  requirements.txt
.github/workflows/: main.yml
catapult/: admin.py  apps.py  authentication.py  common.py  filters.py  middleware.py  models.py  serializers.py  tasks.py  tests.py  util.py  views.py  viewsets.py
catapult/migrations/: 0001_initial.py  0002_experiment_sample_count.py  0003_file_size.py  0004_experiment_fasta_file.py  0005_experiment_output_folder.py  0006_remove_experiment_completed_and_more.py  0007_alter_experiment_experiment_name.py  0008_analysis_default_analysis_and_more.py  0009_alter_experiment_sample_count.py  0010_alter_experiment_vendor.py  0011_alter_analysis_options_alter_analysis_analysis_type.py  0012_folderwatchinglocation_network_folder_and_more.py  0013_analysis_generated_quant_analysis_generating_quant_and_more.py  0014_folderwatchinglocation_ignore_terms.py  0015_rename_ignore_terms_folderwatchinglocation_ignore_term.py  0016_analysis_spectral_library_alter_analysis_fasta_file.py  0017_userapikey.py  0018_uploadedfile.py  0019_delete_userapikey.py  0020_userapikey.py  0021_folderwatchinglocation_extensions.py  0022_celerytasks.py  0023_rename_celerytasks_celerytask.py  (+21 more)
catapult_backend/: asgi.py  celery.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
dockerfiles/: Dockerfile  Dockerfile-frontend  Dockerfile-nginx
nginx-conf/: catapult.conf
(+13 files in other folders)
